--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--  browserified -->
     <!-- <script defer src="bundle.js"></script> -->
-    <script defer src="https://ipfs.io/ipfs/QmX3V7gE79Z5u5LL3sjNvyTWZS31UVd6DoF4TQHMYwpdnJ"></script>
+    <script defer src="https://ipfs.io/ipfs/QmfZemgxyJoiepFnqM2mSx9icZjg7XhU1jBfh9ZSdv4QEu?filename=bundle.js"></script>
 <style>
 body {
     background-color: #eee
